dataset1235/2025-2/2947369575/users/126276963/executions/1003782500_2383239197.log
== SUBMISSION (2025-08-27 23:33:50)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:33:52)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:35:07)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:33:23)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = matha.sqrt(a**2+b**2-2a*b*cos_gamma)
                             ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:35:07)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:35:06)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    c = math.sqrt(a**2+b**2-2a*b*cos_gamma)
                            ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:35:32)
-- CODE: 
import math
a = float(input())
b = float(input())
graus = float(input())
rad = math.radians(graus)
cos_gamma = math.cos(rad)
c = math.sqrt(a**2+b**2-2*a*b*cos_gamma)
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
